src/Author.css
.Author-modal{
	left: 14rem;
	border: 1px solid lightgray;
	width: 17rem;
	overflow-y: auto;
    max-height: 20rem;
	background: white;
}

.Author-item{
	display: block;
	height: 2rem;
	padding-top: .3rem;
	text-align: left;
	font-size: .8rem;
}

.Author-default{
	padding-left: 1.5rem;
	font-weight: 600;
}

.Author-itemTitle{
	display: block;
	height: 1.5rem;
	padding-top: .3rem;
	text-align: left;
	font-size: .8rem;
	font-weight: 600;
	padding-left: .5rem;
	background-color: #f6f8fa;
	border-bottom: 1px solid lightgray;
}

.Author-search{
	display: flex;
	flex-direction: row;
	height: 2.75rem;
	width: 100%;
	margin-top: .1rem;
	margin-bottom: .1rem;
	justify-content: center;
	background-color: #f6f8fa;
	border-bottom: 1px solid lightgray;
}

.Author-searchInput{
	width: 90%;
	height: 1.8rem;
	margin: .2rem 0 .2rem 0;
	border-radius: .2rem;
	font-size: .85rem;
}

.Author-itemAvatar {
	padding-left: 1rem;
	padding-right: .5rem;
	border-radius: 3px;
    display: inline-block;
    height: 20px;
	width: 20px;
}

.Author-itemLabel {
	border-radius: 3px;
    display: inline-block;
    height: 14px;
    margin-right: 2px;
    margin-top: -1px;
    vertical-align: middle;
	width: 14px;
}

.Author-button {
	display: inline-flex;
	align-items: center;
	height: 2rem;
	padding-top: .3rem;
	text-align: left;
	font-size: .8rem;
	width: 100%;
}

.Author-button:hover {
	background:#0366d6;
	color: white;
}

.Author-searchButton {
	display: inline-flex;
	align-items: center;
	height: 3rem;
	padding-top: .3rem;
	text-align: left;
	font-size: .8rem;
	width: 100%;
}

.Author-searchButton:hover {
	background:#0366d6;
	color: white;
}

